--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "athome-sensorvalue-config-schema.coffee"
   ],
   "version": "0.1.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "serialport": "1.3.1"
   },
