--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serialport": "1.3.1"
   },
   "peerDependencies": {
-    "pimatic": ">0.7.x"
+    "pimatic": "0.7.*"
   },
   "engines": {
     "node": ">0.8.x",
