--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "peerDependencies": {
     "pimatic": "0.7.*"
   },
+  "configSchema": "athome-plugin-config-schema.coffee",
   "engines": {
     "node": ">0.8.x",
     "npm": ">1.1.x"
