--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   ],
   "version": "0.1.4",
   "private": false,
+  "configSchema": "athome-plugin-config-schema.coffee",  
   "dependencies": {
     "serialport": ">1.3.1"
   },
   "peerDependencies": {
-    "pimatic": "0.7.*"
+    "pimatic": "0.8.*"
   },
   "engines": {
     "node": ">0.8.x",
