--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "athome-plugin-config-schema.coffee",
     "athome-device-config-schema.coffee"
   ],
-  "version": "0.8.2",
+  "version": "0.9.0",
   "private": false,
   "configSchema": "athome-plugin-config-schema.coffee",
   "dependencies": {
-    "serialport": ">1.3.1"
+    "serialport": "~2.0.6"
   },
   "peerDependencies": {
-    "pimatic": "0.8.*"
+    "pimatic": "0.9.*"
   },
   "engines": {
     "node": ">0.8.x",
